# RMP_prox

./: CMakeLists.txt  Chapter_RMP.md  LOCAL_CHANGES.md  README.md  RMPFLOW_200HZ_ACCEL_LIMIT_AUDIT_20260720.md  RMPFLOW_GAIN20_STABILITY_AUDIT_20260720.md  RMPFLOW_STABILITY_PROOF.md  RMPFLOW_STABILITY_VALIDATION_20260719.md  STAGE2_TANGENT_ESCAPE_GDS.md  TANGENT_ESCAPE_CANONICAL.md  TANGENT_ESCAPE_RISK_DAMPED.md  activate_env.sh  build_and_run.sh  package.xml  setup_venv.sh
config/: experiment_goal_poses.yaml  leaf_ablation_inactive_proximity.csv  leaf_ablation_tof_w_proximity.csv  params.yaml  rb10_rmp_config.yaml  rb10_rmpflow.rviz  rb10_rmpflow_camera_obstacles.rviz
include/rb10_rmpflow_rviz/: casadi_task_graph.hpp  escape_energy_certificate.hpp  joint_acceleration_limiter.hpp  paper_gds_collision.hpp  paper_gds_joint_limit.hpp  pinocchio_direct_solver.hpp  pinocchio_model.hpp  rb10_model.hpp  rb10_socket_client.hpp  rmp_eigen_solver.hpp  rmp_learning_interface.hpp  rmp_learning_stack.hpp  rmp_solver_interface.hpp  sector_wall_following_collision_rmp.hpp
launch/: camera_obstacle_feature.launch.py  camera_rviz.launch.py  fake_proximity_scenario.launch.py  fake_proximity_scenario_v2.launch.py  mediapipe_pose_obstacle.launch.py  rb10_model_only.launch.py  rb10_rmpflow.launch.py  rb10_rmpflow_camera_proximity.launch.py  rb10_rmpflow_canonical_validation.launch.py  rb10_rmpflow_fake_proximity.launch.py  rb10_rmpflow_gds_stability_validation.launch.py  rb10_rmpflow_leaf_ablation_fixed.launch.py  rb10_rmpflow_real_proximity_record.launch.py  rb10_rmpflow_real_target_position_p45d45.launch.py  rb10_rmpflow_stage4_validation.launch.py  rb10_rmpflow_test.launch.py
scripts/: analyze_rmp_leaf_ablation.py  camera_body_sphere_cloud_bridge.py  camera_obstacle_feature_node.py  check_tangent_escape_closed_loop.py  check_tangent_escape_rmp_validation.py  check_tangent_escape_stage0_fake.py  compare_rmp_closed_loop_smoothness.py  compare_rmp_leaf_ablation.py  compare_tangent_escape_ab.py  experiment_goal_runner.py  fake_proximity_scenario.py  fake_proximity_scenario_v2.py  mediapipe_pose_obstacle_node.py  plot_rmpflow_proof_run.py  plot_tangent_escape_filter_debug.py  plot_tangent_escape_filter_report.py  plot_tangent_escape_geometry_report.py  plot_tangent_escape_lyapunov.py  plot_tcp_accel_direction.py  rb10_api_bridge.py  rmp_data_recorder.py  rmp_goal_logger.py  rmp_goal_sequence_visualizer.py  rmpflow_trace_logger.py  run_camera_rviz.sh  stability_certificate_visualizer.py  tune_tangent_escape_rmp_fake.py  validate_tangent_escape_stability_suite.py
scripts/api/: cobot.py
src/: casadi_task_graph.cpp  escape_energy_certificate.cpp  interactive_goal_marker.cpp  joint_state_adapter.cpp  obstacle_manager.cpp  paper_gds_collision.cpp  paper_gds_joint_limit.cpp  pinocchio_direct_solver.cpp  pinocchio_model.cpp  proximity_obstacle_bridge.cpp  rb10_direct_bridge_node.cpp  rb10_socket_client.cpp  rmp_learning_interface.cpp  rmp_learning_stack.cpp  rmpflow_bridge.cpp  rmpflow_controller_node.cpp  sector_wall_following_collision_rmp.cpp  tangent_escape_canonical.cpp  tof_ray_visualizer.cpp
test/: test_escape_energy_certificate.cpp  test_paper_gds_collision.cpp  test_paper_gds_joint_limit.cpp  test_tangent_escape_canonical.cpp
tests/: test_sector_wall_following_collision_rmp.cpp
urdf/: rb10_1300e.urdf
urdf/stl/: End_effector_Assembly__Simple.stl  Link2_Assembly__Simple.stl
